--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pylint = "*"
+yapf = "*"
+flake8 = "*"
 
 [packages]
 flask = "*"
