--- a/settings/rules/rules.yaml
+++ b/settings/rules/rules.yaml
@@ -1,19 +1,45 @@
-# Miniumum and maxium Lix score for a rapport
+# Miniumum and maxium Lix score for a rapport.
 lix:
   min: 32.6
   max: 56.7
 
-# Words that are tagged with these wordclasses are skipped during the spell check
+# Words that are tagged with these wordclasses are skipped during the spell check.
 spelling_skip_wordclasses:
   - PM                          # names
   - AN                          # abbreviations
 
-# Marks the start and end of citations
+# Marks the start and end of citations.
 citation_delimiters:
   - "'"
   - "\""
   - "”"
   - "“"
 
+# Regex's that match unwanted grammar.
 grammar_regex:
   - { regex: " {2,}", message: Mer än ett mellanslag. }
+
+# List of unwanted words and suggestions what to use instead, does not match cited text.
+# These are suggestions found in the offical police documentation guidelines.
+unwanted_words:
+  - { word: handha, alternative: ha hand om instället }
+  - { word: ianspråkta, alternative: ta i anspråk }
+  - { word: ikraftträda, alternative: träda i kraft }
+  - { word: inbetala, alternative: betala in }
+  - { word: medfölja, alternative: följa med }
+  - { word: medtaga, alternative: ta med }
+  - { word: mottaga, alternative: ta emot }
+  - { word: överenskomma, alternative: komma överens }
+  - { word: efterhöra, alternative: höra efter }
+  - { word: inkomma, alternative: komma in }
+  - { word: återlämna, alternative: lämna tillbaka }
+  - { word: avvaktan, alternative: väntan }
+  - { word: därest, alternative: om }
+  - { word: ej, alternative: inte }
+  - { word: enär, alternative: eftersom, därför att }
+  - { word: erfordras, alternative: behövs }
+  - { word: erlägga, alternative: betala }
+  - { word: föreligga, alternative: finnas }
+  - { word: gälda, alternative: betala }
+  - { word: åligga, alternative: ska }
+  - { word: jämlikt, alternative: enligt }
