Expand the forbidden words with some common swear words

--- a/settings/rules/forbidden_words.yaml
+++ b/settings/rules/forbidden_words.yaml
@@ -1,5 +1,20 @@
-# List of words that are forbidden
-- neger
+# List of words that are forbidden if not in citation
+- arslet
+- babbe
 - bitch
+- blatte
+- fag
+- faggot
+- fan
 - fitta
+- helvete
 - hora
+- jävelskap
+- jävla
+- kuk
+- neger
+- nigger
+- piss
+- satan
+- skit
+- äckel
