--- a/settings/rules/rules.yaml
+++ b/settings/rules/rules.yaml
@@ -19,6 +19,8 @@ citation_delimiters:
 grammar_regex:
   - { regex: " {2,}", message: Mer än ett mellanslag. }
   - { regex: "(?<!\\d)\\D{1}([1-9][0-2]?)\\D{1}(?!\\d)", message: Nummer mellan noll och tolv ska skrivas med bokstäver. }
+  - { regex: "(?<!\\d)\\d{1,4}[-\\.]\\d{1,2}[-\\.]\\d{1,2}(?!\\d)|(?<!\\d)\\d{1,2}[-\\.]\\d{1,2}[-\\.]\\d{1,4}(?!\\d)",
+  message: Datum ska skrivas den 3 juni 2003 eftersom det skrivsättet är mest läsbart. }
 
 # List of unwanted words and suggestions what to use instead, does not match cited text.
 # These are suggestions found in the offical police documentation guidelines.
