Add global named entitie rules

--- a/settings/rules/rules.yaml
+++ b/settings/rules/rules.yaml
@@ -17,12 +17,24 @@ citation_delimiters:
 
 # Regex's that match unwanted grammar.
 grammar_regex:
-  - regex: " {2,}"
-    message: Mer än ett mellanslag.
-  - regex: "(?<!\\d)\\D{1}([1-9][0-2]?)\\D{1}(?!\\d|januari|februari|mars|april|maj|juni|juli|augusti|september|oktober|november|december)(?<!\\d)\\D{1}([1-9][0-2]?)\\D{1}(?!\\d)"
-    message: Nummer mellan noll och tolv ska skrivas med bokstäver.
-  - regex: "(?<!\\d)\\d{1,4}[-\\.]\\d{1,2}[-\\.]\\d{1,2}(?!\\d)|(?<!\\d)\\d{1,2}[-\\.]\\d{1,2}[-\\.]\\d{1,4}(?!\\d)"
-    message: Datum ska skrivas den 3 juni 2003 eftersom det skrivsättet är mest läsbart.
+  - message: Mer än ett mellanslag.
+    regex: " {2,}"
+  - message: Nummer mellan noll och tolv ska skrivas med bokstäver.
+    regex: "(?<!\\d)\\D{1}([1-9][0-2]?)\\D{1}(?!\\d|januari|februari|mars|april|maj|juni|juli|augusti|september|oktober|november|december)(?<!\\d)\\D{1}([1-9][0-2]?)\\D{1}(?!\\d)"
+
+# Rules for named entities, applies to entire rapport
+named_entities:
+  - message: "Telefonnumret är inte i korrekt format. Telefonnummer skrivs på följande sätt: 08-123 45, 08-12 34 56, 08-123 45 67, 08-123 456 78."
+    identity: NUMEX
+    type: MSR
+    subtype: TEL
+    valid: "\\d{2,3}\\-((\\d{3} \\d{2}(?! |\\d))|(\\d{2} \\d{2} \\d{2}(?! |\\d))|(\\d{3} \\d{2} \\d{2}(?! |\\d))|(\\d{3} \\d{3} \\d{2}(?! |\\d)))"
+  - message: "Datum ska skrivas den 3 juni 2003 eftersom det skrivsättet är mest läsbart."
+    identity: TIMEX
+    type: TME
+    subtype: DAT
+    invalid: "(?<!\\d)\\d{1,4}[-\\.]\\d{1,2}[-\\.]\\d{1,2}(?!\\d)|(?<!\\d)\\d{1,2}[-\\.]\\d{1,2}[-\\.]\\d{1,4}(?!\\d)"
+
 
 # List of unwanted words and suggestions what to use instead, does not match cited text.
 # These are suggestions found in the offical police documentation guidelines.
